[package]
name = "kast"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "kast"
crate-type = ["lib"]

[[bin]]
name = "main"
path = "bin/main.rs"


[dependencies]
rdkafka = { version = "0.28", features = ["cmake-build"] }
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [
    "tracing-log",
    "env-filter",
] }
async-stream = "0.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.56"
pin-project = "*"
sled = "0.34.7"
rocksdb = "0.18.0"
bigtable_rs = "0.1.5"
dyn-clone = "1.0.5"
chrono = "0.4.19"
async-trait = "0.1.53"
google-bigtableadmin2 = "3.0.0"
# bigtable depends on `yup-oauth2` ^6, but on hyper-rustls==0.22, but `yup-oauth2` 6.6.0 pulls hyper-rustls==0.23 :(
yup-oauth2 = "=6.5.0"

[dev-dependencies]
rstest = "*"
tempfile = "*"

