[package]
name = "kast"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "kast"
crate-type = ["lib"]

[[bin]]
name = "main"
path = "bin/main.rs"
required-features = ["testing"]

[features]
default = []
testing = ["async-channel"]

[dependencies]
rdkafka = { version = "0.28", features = ["cmake-build"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features=["sync"]}
futures = "0.3.21"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [
    "tracing-log",
    "env-filter",
] }
async-stream = "0.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.79"
prost = "0.10.4"
anyhow = "1.0.56"
pin-project = "*"
sled = "0.34.7"
dyn-clone = "1.0.5"
chrono = "0.4.19"
async-trait = "0.1.53"
thiserror = "1.0.31"
async-channel = { version = "*", optional = true }

[dev-dependencies]
rstest = "*"
tempfile = "*"
